tests/ast_interpreter/err_builtin_assign.expected
<string>:2:5: error: built-in function cannot be assigned to
    print = 42;
    ^^^^^
