tests/ast_interpreter/err_builtin_assign.nx
fun main() {
    print = 42;
}
